# trees-everywhere

./: .pre-commit-config.yaml  README.md  pyproject.toml
account/: admin.py  models.py
account/migrations/: 0001_initial.py  0002_account_users.py
project/: settings.py  urls.py
templates/: base.html  index.html  login.html
tree/: admin.py  models.py  serializers.py  views.py
tree/migrations/: 0001_initial.py  0002_plantedtree_account_plantedtree_tree_and_more.py  0003_remove_plantedtree_age_plantedtree_latitude_location_and_more.py
user/: admin.py  models.py  views.py
user/migrations/: 0001_initial.py  0002_profile_user_user_accounts.py
