[tool.poetry]
name = "trees-everywhere"
version = "0.1.0"
description = ""
authors = ["Tânia de Arruda <develop.tania@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
