[tool.poetry]
name = "trees-everywhere"
version = "0.1.0"
description = ""
authors = ["Tânia de Arruda <develop.tania@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
